force-app/main/default/objects/Credit__c/Credit__c.object-meta.xml
<CustomObject>
    <description>Represents a financial inflow event where money is received from a source and deposited into an account.</description>
    <label>Credit</label>
    <nameField>
        <label>Credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>