force-app/main/default/objects/Credit__c/fields/Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Date__c</fullName>
    <description>Date the income was received</description>
    <inlineHelpText>Select the date when the amount was credited or received.</inlineHelpText>
    <label>Credit Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>