force-app/main/default/objects/Credit__c/fields/Credit_Source__c.field-meta.xml
<CustomField>
    <fullName>Credit_Source__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Credit Source</label>
    <referenceTo>Source__c</referenceTo>
    <relationshipLabel>Credits</relationshipLabel>
    <relationshipName>Credits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>