force-app/main/default/objects/Credit__c/fields/Is_Salary__c.field-meta.xml
<CustomField>
    <fullName>Is_Salary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies salary income</description>
    <inlineHelpText>Check if this income represents salary.</inlineHelpText>
    <label>Is Salary</label>
    <type>Checkbox</type>
</CustomField>