force-app/main/default/objects/Credit__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <description>External reference or transaction ID</description>
    <inlineHelpText>Enter bank transaction ID or payment reference if available.</inlineHelpText>
    <label>Reference Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>