force-app/main/default/objects/Credit__c/fields/Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Date__c</fullName>
    <description>Next reminder date for approval</description>
    <inlineHelpText>Used when salary approval is delayed to schedule the next notification.</inlineHelpText>
    <label>Reminder Date</label>
    <type>Date</type>
</CustomField>