force-app/main/default/objects/Credit__c/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>true</active>
    <description>Default Record Type</description>
    <label>Default</label>
</RecordType>