force-app/main/default/objects/Credit__c/recordTypes/Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Read_Only</fullName>
    <active>true</active>
    <description>Read Only Record Type once created</description>
    <label>Read Only</label>
</RecordType>