force-app/main/default/objects/Credit__c/validationRules/Amount_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Cannot_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount cannot be negative!</errorMessage>
</ValidationRule>