force-app/main/default/objects/Credit__c/validationRules/Cannot_Create_Credit_on_Cancelled_State.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Create_Credit_on_Cancelled_State</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW() , TEXT(PRIORVALUE(Status__c)) = &quot;Cancelled&quot; )</errorConditionFormula>
    <errorMessage>Cannot Create Record in Cancelled State</errorMessage>
</ValidationRule>