force-app/main/default/objects/Credit__c/validationRules/Connot_Change_Status_from_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Connot_Change_Status_from_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(Status__c),
  OR (TEXT(PRIORVALUE(Status__c)) = &quot;Approved&quot;,              TEXT(PRIORVALUE(Status__c)) = &quot;Cancelled&quot; )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot be changed from Approved or Cancelled. Create a new Credit record instead.</errorMessage>
</ValidationRule>