force-app/main/default/objects/Credit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Accounts__c</columns>
    <columns>Credit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>